[package]
name = "discordinteractions"
description = "A library to declare Discord Interactions easily in Rust, with support for Serde"
version = "1.0.0"
authors = ["polvallverdu <"]
keywords = ["discord", "interaction", "api", "serde"]
repository = "https://github.com/wosher-co/discordinteractions"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
serde_support = ["serde", "serde_json"]